# cse554-winter-2026

./: .gitignore  clean.sh  common.mk  gpu_config.py  main.py  pyproject.toml  run_section1_cuda.sh  run_section1_python.sh  run_section2.sh  run_section3.sh  test_coop  test_coop.cu
W1/: addition2.cu  addition_torch.py  addition_torch_perf.py  addition_torch_perf_correct.py  addition_torch_profiler.py  addition_triton.py  torch_multi_step.py  triton_multi_step.py
W1/L1_commented/: addition_torch.py  addition_torch_cuda_event_2_4.py  addition_torch_perf_torch_profiler_3.py  addition_torch_time_1.py  addition_triton.py
W1/L2_commented/: addition_cuda.cu  addition_cuda_timing.cu  addition_torch.py  addition_torch_complex.py  addition_trition.py  addition_trition_complex.py
W1L1/: Makefile  addition  addition.cu  addition2  run_cuda.sh
W2/L3_commented/: addition2_cuda.cu  reduction1.cu  reduction2.cu  reduction3.cu  reduction4.cu  reduction5.cu  transpose_torch.py  transpose_v1.cu  transpose_v1_old.cu  transpose_v2.cu  transpose_v3.cu  transpose_v4.cu
W2/L3_commented/pybind/: CMakeLists.txt  addition.cu  test.py
W2L3/: build_and_run.sh  clean.sh
W3/: transformer.py
assignment1/: W2L3_IMPLEMENTATION_SUMMARY.md  run_all_tests.sh  run_all_tests_test.sh
assignment1/common/: gpu_specs.h  gpu_specs.py
assignment1/host_GPU/: Makefile  bandwidth_data.csv  copy_first_column.cu  copy_first_column.h  copy_first_column_test  memory_transfer.cu  memory_transfer_test
assignment1/rms_norm/: KERNEL_USAGE_GUIDE.md
assignment1/rms_norm/matrix/: Makefile  W2L3_OPTIMIZATION_NOTES.md  main.cu  rms_norm_matrix.cu  rms_norm_matrix_test  rms_norm_matrix_test_profile  test_w2l3  test_w2l3.cu
assignment1/rms_norm/matrix/profiling_results/: rms_norm_matrix_20260125_151811.qdstrm  rms_norm_matrix_20260125_151838.qdstrm
assignment1/rms_norm/vector/: Makefile  main.cu  rms_norm_vector.cu  rms_norm_vector_test  test_simple.cu  test_w2l3  test_w2l3.cu
assignment1/scripts/: run_section_1.sh  run_section_2.sh  run_section_3.sh
assignment1/silu/: silu_triton_kernel.py  silu_triton_test.py
assignment1/silu/CUDA/: CMakeLists.txt  Makefile  main.cu  silu.cu  silu.h  silu_test  silu_test_profile  test_cuda.cu
assignment1/silu/profiling_results/: cuda_silu.qdstrm
assignment1_origin/host_GPU/: copy_first_column.cu
assignment1_origin/rms_norm/matrix/: CMakeLists.txt  rms_norm_matrix.cu  rms_norm_matrix.h
assignment1_origin/rms_norm/vector/: main.cu  rms_norm_vector.cu
assignment1_shoh10/: .gitignore  README.md  common.mk  requirements.txt  run_all_tests.sh
assignment1_shoh10/common/: gpu_specs.h
assignment1_shoh10/host_GPU/: CMakeLists.txt  Makefile  copy_first_column.cu  copy_first_column.h  main.cu  memory_transfer.cu
assignment1_shoh10/rms_norm/matrix/: Makefile  main.cu  rms_norm_matrix.cu  rms_norm_matrix.h
assignment1_shoh10/rms_norm/vector/: CMakeLists.txt  Makefile  main.cu  rms_norm_vector.cu  rms_norm_vector.h  test_simple.cu
assignment1_shoh10/scripts/: plot_bandwidth.py  run_section_1.sh  run_section_3.sh
assignment1_shoh10/silu/: silu_torch.py  silu_triton_kernel.py
assignment1_shoh10/silu/CUDA/: Makefile  main.cu  silu.cu  silu.h  test_init.cu
profiling_results/: copy.sqlite  cuda_silu.sqlite  rms_norm_matrix.sqlite  rms_norm_vector.sqlite
profiling_results/stats/: copy_stats.txt  cuda_silu_stats.txt  cuda_silu_summary.txt  rms_norm_matrix_stats.txt  rms_norm_vector_stats.txt
scripts/: check_gpu_config.sh  compare_gpu_servers.sh  plot_bandwidth.py
